Removed Cat landmark feature

--- a/Predict/templates/Predict/index.html
+++ b/Predict/templates/Predict/index.html
@@ -78,7 +78,7 @@
             <p class="card-text">
               The cat landmark model uses facial landmarks to predict and annotate key features on cat images, enhancing image analysis capabilities.
             </p>
-            <a href="/home/predict_landmarks/" class="btn btn-primary">Cat Face Landmarks</a>
+            <a href="#" class="btn btn-primary">Cat Face Landmarks</a>
           </div>
         </div>
         <div class="card" style="width: 18rem">
