--- a/Predict/templates/Predict/index.html
+++ b/Predict/templates/Predict/index.html
@@ -1,119 +1,333 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/home">Predict</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Make Prediction on
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Car</a></li>
-                <li><a class="dropdown-item" href="#">Dog</a></li>
-                <li><a class="dropdown-item" href="#">CIFAR-10</a></li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li><a class="dropdown-item" href="#">Support</a></li>
-                <li><a class="dropdown-item" href="#">Write to Us</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact us</a>
-            </li>
-          </ul>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Home</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.19.0/font/bootstrap-icons.css">
+  <style>
+    body {
+      background-color: rgb(44, 44, 44);
+      /* Set the background color to black */
+    }
+
+    .card-img-top {
+      object-fit: cover;
+      height: 200px;
+    }
+
+    .card-title {
+      font-size: 1.5rem;
+    }
+
+    .card-description {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    .custom-shadow {
+      box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.5);
+      /* Adjust values as needed */
+    }
+
+    /* Custom styling for the navbar */
+    .navbar {
+      box-shadow: 5px 5px 10px 3px rgba(0, 0, 0, 0.5);
+    }
+
+    .navbar-brand {
+      font-weight: bold;
+    }
+
+    .navbar-nav .nav-link {
+      color: #ffffff;
+      /* Adjust the color as needed */
+    }
+
+    .navbar-toggler-icon {
+      background-color: #0080ff;
+      /* Adjust the color as needed */
+    }
+
+    .container-with-margin {
+      margin-top: 80px;
+    }
+  </style>
+</head>
+<body>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/home">Haris Ansar Khan</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/TheAIExplorer" target="_blank"
+              rel="noopener noreferrer">GitHub</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://linkedin.com/in/harisansarkhan" target="_blank"
+              rel="noopener noreferrer">LinkedIn</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://gmail.com/" target="_blank" rel="noopener noreferrer">Email me</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="tel:+91-9793300967">Call Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="resume.pdf" target="_blank" rel="noopener noreferrer">Download Resume</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container text-center mt-10 container-with-margin">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <!-- Card 1 -->
+      <div class="col">
+        <div class="card h-100 custom-shadow">
+          <img src="../static/Predict/1.png" class="card-img-top img-fluid" alt="Cat Face Landmarks Detector" />
+          <div class="card-body text-center">
+            <h5 class="card-title">Cat Face Landmarks Detector</h5>
+            <p class="card-text card-description">
+              The cat landmark model uses facial landmarks to predict and annotate key features on cat images,
+              enhancing
+              image analysis capabilities.
+            </p>
+            <a href="/home/predict_landmarks/" class="btn btn-primary">Open Project</a>
+          </div>
         </div>
       </div>
-    </nav>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <div class="container">
-      <div class="row">
-        <div class="card" style="width: 18rem">
-          <img
-            src="../static/Predict/1.png"
-            class="card-img-top"
-            alt="Image Description"
-          />
-          <div class="card-body text-center">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              The cat landmark model uses facial landmarks to predict and annotate key features on cat images, enhancing image analysis capabilities.
-            </p>
-            <a href="#" class="btn btn-primary">Cat Face Landmarks</a>
+      <!-- Card 2 -->
+      <div class="col">
+        <div class="card h-100 custom-shadow">
+          <div class="card h-100">
+            <img src="../static/Predict/2.jpg" class="card-img-top img-fluid" alt="Predict Car Brand" />
+            <div class="card-body text-center">
+              <h5 class="card-title">Predict Car Brand</h5>
+              <p class="card-text card-description">
+                Predict the brand of a car from an image, with possible brands including Audi, Hyundai Creta,
+                Mahindra
+                Scorpio, Rolls Royce, Swift, Tata Safari, and Toyota Innova.
+              </p>
+              <a href="/home/predict_car_brand/" class="btn btn-primary">Open Project</a>
+            </div>
           </div>
         </div>
-        <div class="card" style="width: 18rem">
-          <img
-            src="../static/Predict/2.jpg"
-            class="card-img-top"
-            alt="Image Description"
-          />
-          <div class="card-body text-center">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Predict the brand of a car from an image, with possible brands including Audi, Hyundai Creta, Mahindra Scorpio, Rolls Royce, Swift, Tata Safari, and Toyota Innova.
-            </p>
-            <a href="/home/predict_car_brand/" class="btn btn-primary"
-              >Predict Car Brand</a
-            >
+      </div>
+
+      <!-- Card 3 -->
+      <div class="col">
+        <div class="card h-100 custom-shadow">
+          <div class="card h-100">
+            <img src="../static/Predict/3.jpg" class="card-img-top img-fluid" alt="Predict Dog Breed" />
+            <div class="card-body text-center">
+              <h5 class="card-title">Predict Dog Breed</h5>
+              <p class="card-text card-description">
+                Predict dog breed from 120 possible dog breeds. In total, the dataset contains 20,580 high-quality
+                images,
+                ensuring a diverse and representative sample of various dog breeds.
+              </p>
+              <a href="#" class="btn btn-primary">Open Project</a>
+            </div>
           </div>
         </div>
-        <div class="card" style="width: 18rem">
-          <img
-            src="../static/Predict/3.jpg"
-            class="card-img-top"
-            alt="Image Description"
-          />
+      </div>
+      <!-- Card 1 -->
+      <div class="col">
+        <div class="card h-100 custom-shadow">
+          <div class="card h-100">
+            <img src="../static/Predict/1.png" class="card-img-top img-fluid" alt="Cat Face Landmarks Detector" />
+            <div class="card-body text-center">
+              <h5 class="card-title">Cat Face Landmarks Detector</h5>
+              <p class="card-text card-description">
+                The cat landmark model uses facial landmarks to predict and annotate key features on cat images,
+                enhancing
+                image analysis capabilities.
+              </p>
+              <a href="/home/predict_landmarks/" class="btn btn-primary">Open Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="col">
+        <div class="card h-100 custom-shadow">
+          <div class="card h-100">
+            <img src="../static/Predict/2.jpg" class="card-img-top img-fluid" alt="Predict Car Brand" />
+            <div class="card-body text-center">
+              <h5 class="card-title">Predict Car Brand</h5>
+              <p class="card-text card-description">
+                Predict the brand of a car from an image, with possible brands including Audi, Hyundai Creta,
+                Mahindra
+                Scorpio, Rolls Royce, Swift, Tata Safari, and Toyota Innova.
+              </p>
+              <a href="/home/predict_car_brand/" class="btn btn-primary">Open Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="col">
+        <div class="card h-100 custom-shadow">
+          <div class="card h-100">
+            <img src="../static/Predict/3.jpg" class="card-img-top img-fluid" alt="Predict Dog Breed" />
+            <div class="card-body text-center">
+              <h5 class="card-title">Predict Dog Breed</h5>
+              <p class="card-text card-description">
+                Predict dog breed from 120 possible dog breeds. In total, the dataset contains 20,580 high-quality
+                images,
+                ensuring a diverse and representative sample of various dog breeds.
+              </p>
+              <a href="#" class="btn btn-primary">Open Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Card 1 -->
+      <div class="col">
+        <div class="card h-100 custom-shadow">
+          <div class="card h-100">
+            <img src="../static/Predict/1.png" class="card-img-top img-fluid" alt="Cat Face Landmarks Detector" />
+            <div class="card-body text-center">
+              <h5 class="card-title">Cat Face Landmarks Detector</h5>
+              <p class="card-text card-description">
+                The cat landmark model uses facial landmarks to predict and annotate key features on cat images,
+                enhancing
+                image analysis capabilities.
+              </p>
+              <a href="/home/predict_landmarks/" class="btn btn-primary">Open Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="col">
+        <div class="card h-100 custom-shadow">
+          <div class="card h-100">
+            <img src="../static/Predict/2.jpg" class="card-img-top img-fluid" alt="Predict Car Brand" />
+            <div class="card-body text-center">
+              <h5 class="card-title">Predict Car Brand</h5>
+              <p class="card-text card-description">
+                Predict the brand of a car from an image, with possible brands including Audi, Hyundai Creta,
+                Mahindra
+                Scorpio, Rolls Royce, Swift, Tata Safari, and Toyota Innova.
+              </p>
+              <a href="/home/predict_car_brand/" class="btn btn-primary">Open Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="col">
+        <div class="card h-100 custom-shadow">
+          <div class="card h-100">
+            <img src="../static/Predict/3.jpg" class="card-img-top img-fluid" alt="Predict Dog Breed" />
+            <div class="card-body text-center">
+              <h5 class="card-title">Predict Dog Breed</h5>
+              <p class="card-text card-description">
+                Predict dog breed from 120 possible dog breeds. In total, the dataset contains 20,580
+                high-quality
+                images,
+                ensuring a diverse and representative sample of various dog breeds.
+              </p>
+              <a href="#" class="btn btn-primary">Open Project</a>
+            </div>
+          </div>
+        </div>
+      </div><!-- Card 1 -->
+      <div class="col">
+        <div class="card h-100 custom-shadow">
+          <div class="card h-100">
+            <img src="../static/Predict/1.png" class="card-img-top img-fluid" alt="Cat Face Landmarks Detector" />
+            <div class="card-body text-center">
+              <h5 class="card-title">Cat Face Landmarks Detector</h5>
+              <p class="card-text card-description">
+                The cat landmark model uses facial landmarks to predict and annotate key features on cat
+                images,
+                enhancing
+                image analysis capabilities.
+              </p>
+              <a href="/home/predict_landmarks/" class="btn btn-primary">Open Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="col">
+        <div class="card h-100 custom-shadow">
+          <div class="card h-100">
+            <img src="../static/Predict/2.jpg" class="card-img-top img-fluid" alt="Predict Car Brand" />
+            <div class="card-body text-center">
+              <h5 class="card-title">Predict Car Brand</h5>
+              <p class="card-text card-description">
+                Predict the brand of a car from an image, with possible brands including Audi, Hyundai
+                Creta,
+                Mahindra
+                Scorpio, Rolls Royce, Swift, Tata Safari, and Toyota Innova.
+              </p>
+              <a href="/home/predict_car_brand/" class="btn btn-primary">Open Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="col">
+        <div class="card h-100 custom-shadow"> <!-- Added 'shadow' class here -->
+          <img src="../static/Predict/3.jpg" class="card-img-top img-fluid" alt="Predict Dog Breed" />
           <div class="card-body text-center">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+            <h5 class="card-title">Predict Dog Breed</h5>
+            <p class="card-text card-description">
+              Predict dog breed from 120 possible dog breeds. In total, the dataset contains 20,580
+              high-quality
+              images,
+              ensuring a diverse and representative sample of various dog breeds.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Open Project</a>
           </div>
         </div>
       </div>
     </div>
-    
-  </body>
+  </div>
+  <!-- ... Previous HTML code ... -->
+
+  <footer class="bg-dark text-light text-center p-5 footer">
+    <div class="container-fluid">
+      <p class="footer-text">&copy; 2024 Haris Ansar Khan. All rights reserved.</p>
+      <div class="social-icons mt-4">
+        <a href="https://github.com/TheAIExplorer" target="_blank" rel="noopener noreferrer" class="social-icon">
+          <i class="bi bi-github"></i>
+        </a>
+        <a href="https://linkedin.com/in/harisansarkhan" target="_blank" rel="noopener noreferrer" class="social-icon">
+          <i class="bi bi-linkedin"></i>
+        </a>
+        <!-- Add more social icons as needed -->
+      </div>
+    </div>
+  </footer>
+
+  <!-- ... Subsequent HTML code ... -->
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
 </html>
