--- a/Predict/templates/Predict/index.html
+++ b/Predict/templates/Predict/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.18.0/font/bootstrap-icons.css" rel="stylesheet">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
@@ -34,6 +35,11 @@
       /* Adjust values as needed */
     }
 
+    .custom-shadow-footer {
+      box-shadow: -4px -4px 10px 5px rgba(0, 0, 0, 0.5);
+      /* Adjust values as needed */
+    }
+
     /* Custom styling for the navbar */
     .navbar {
       box-shadow: 5px 5px 10px 3px rgba(0, 0, 0, 0.5);
@@ -54,7 +60,8 @@
     }
 
     .container-with-margin {
-      margin-top: 80px;
+      margin-top: 125px;
+      margin-bottom: 80px;
     }
   </style>
 </head>
@@ -83,7 +90,9 @@
         </ul>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="tel:+91-9793300967">Call Me</a>
+            <a class="nav-link" href="tel:+91-9793300967">
+              <i class="bi bi-telephone-fill "></i> Call
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="resume.pdf" target="_blank" rel="noopener noreferrer">Download Resume</a>
@@ -309,7 +318,7 @@
   </div>
   <!-- ... Previous HTML code ... -->
 
-  <footer class="bg-dark text-light text-center p-5 footer">
+  <footer class="custom-shadow-footer bg-dark text-light text-center p-5 footer">
     <div class="container-fluid">
       <p class="footer-text">&copy; 2024 Haris Ansar Khan. All rights reserved.</p>
       <div class="social-icons mt-4">
@@ -319,12 +328,9 @@
         <a href="https://linkedin.com/in/harisansarkhan" target="_blank" rel="noopener noreferrer" class="social-icon">
           <i class="bi bi-linkedin"></i>
         </a>
-        <!-- Add more social icons as needed -->
       </div>
     </div>
   </footer>
-
-  <!-- ... Subsequent HTML code ... -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
