--- a/Predict/templates/Predict/index.html
+++ b/Predict/templates/Predict/index.html
@@ -1,20 +1,25 @@
 {% extends 'Predict/base.html' %}
+
 {% block title %}Home{% endblock %}
+
 {% block content %}
+
 <div class="row row-cols-1 row-cols-md-3 g-4">
+  {% for project in projects %}
     <div class="col">
-      <div class="card h-100 custom-shadow">
-        <img
-          src="{{ project.image }}"
-          class="card-img-top img-fluid"
-          alt="{{ project.alt }}"
-        />
-        <div class="card-body text-center">
-          <h5 class="card-title">{{ project.title }}</h5>
-          <p class="card-text card-description">{{ project.description }}</p>
-          <a href="{{ project.link }}" class="btn orange-btn">Open Project</a>
+        <div class="card h-100 custom-shadow">
+          <img
+            src="{{project.project_image_path}}"
+            class="card-img-top img-fluid"
+            alt="{{project.project_alt}}"
+          />
+          <div class="card-body text-center">
+            <h5 class="card-title">{{ project.project_title }}</h5>
+            <p class="card-text card-description">{{ project.project_description }}</p>
+            <a href="{{project.project_link}}" class="btn orange-btn">Open {{ project.project_title }}</a>
+          </div>
         </div>
-      </div>
     </div>
+  {% endfor %}
 </div>
 {% endblock %}
