--- a/Predict/templates/Predict/predict_car_brand.html
+++ b/Predict/templates/Predict/predict_car_brand.html
@@ -1,4 +1,4 @@
-{% extends 'Predict/base.html' %}
+{% comment %} {% extends 'Predict/base.html' %}
 
 {% block title %}Car{% endblock %}
 
@@ -21,4 +21,4 @@
     <button type="submit" class="btn orange-btn">Predict</button>
   </form>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
