--- a/webpage/templates/webpage/base.html
+++ b/webpage/templates/webpage/base.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.19.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
     body {
       background-color: rgb(44, 44, 44);
@@ -129,7 +130,7 @@
 
   <footer class="custom-shadow-footer bg-dark text-light text-center p-2 footer">
     <div class="container-fluid">
-      <p class="footer-text text-glow">&copy; 2024 harisansarkhan.ai. All rights reserved.</p>
+      <p class="footer-text text-glow">&copy; 2024. Made with <i class="fa fa-heart" style="font-size:15px;color:red"></i> by Haris Ansar Khan. All rights reserved.</p>
       <div class="social-icons mt-4">
         <a href="https://github.com/TheAIExplorer" target="_blank" rel="noopener noreferrer" class="social-icon">
           <i class="bi bi-github"></i>
