--- a/webpage/templates/webpage/base.html
+++ b/webpage/templates/webpage/base.html
@@ -89,7 +89,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand text-glow" href="#">Haris Ansar Khan</a>
+      <a class="navbar-brand text-glow" href="{% url 'index' %}">Haris Ansar Khan</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -115,9 +115,8 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-glow" href="../static/Predict/resume.pdf" target="_blank"
-              rel="noopener noreferrer">Download
-              Resume</a>
+              <a class="nav-link text-glow" href="{% static 'resume.pdf' %}" target="_blank"
+                  rel="noopener noreferrer">Download Resume</a>
           </li>
         </ul>
       </div>
