--- a/webpage/templates/webpage/index.html
+++ b/webpage/templates/webpage/index.html
@@ -3,20 +3,21 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+{% load static %}
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
   {% for project in projects %}
     <div class="col">
         <div class="card h-100 custom-shadow">
           <img
-            src="{{project.project_image_path}}"
+            src="{{project.image.url}}"
             class="card-img-top img-fluid"
-            alt="{{project.project_alt}}"
+            alt="Project {{ project.project_id }}"
           />
           <div class="card-body text-center">
-            <h5 class="card-title">{{ project.project_title }}</h5>
+            <h5 class="card-title">Project {{ project.project_id }}</h5>
             <p class="card-text card-description">{{ project.project_description }}</p>
-            <a href="{{project.project_link}}" class="btn orange-btn">Open {{ project.project_title }}</a>
+            <a href="{{project.project_id}}/" class="btn orange-btn">Open</a>
           </div>
         </div>
     </div>
